Customize `tool-bar-style' to choose style.  On a Gnome desktop, the default
is taken from the desktop settings.

*** GTK tool bars can be placed on the left/right or top/bottom of the frame.
The frame-parameter tool-bar-position controls this.  It takes the values
top, left, right or bottom.  The Options => Show/Hide menu has entries
for this.

*** The colors for selected text (the region face) are taken from the GTK
theme when Emacs is built with GTK.

*** Emacs uses GTK tooltips by default if built with GTK.  You can turn that
off by customizing x-gtk-use-system-tooltips.

+++
** New basic faces `error', `warning', `success' are available to
highlight strings that indicate failure, caution or successful operation.

** Lucid menus and dialogs can display antialiased fonts if Emacs is built
with Xft.  To change font, use the X resource font, for example:
Emacs.pane.menubar.font:  Courier-12

+++
** On graphical displays, the mode-line no longer ends in dashes.
Also, the first dash (which does not indicate anything) is just
displayed as a space.

** Basic SELinux support has been added.
This requires Emacs to be linked with libselinux at build time.

*** Emacs preserves the SELinux file context when backing up, and
optionally when copying files. To this end, copy-file has an extra
optional argument, and backup-buffer and friends include the SELinux
context in their return values.

*** The new functions file-selinux-context and set-file-selinux-context
get and set the SELinux context of a file.

*** Tramp offers handlers for file-selinux-context and set-file-selinux-context
for remote machines which support SELinux.

+++
** The function format-time-string now supports the %N directive, for
higher-resolution time stamps.

** Changes for exiting Emacs
+++
*** The function kill-emacs is now run upon receipt of the signals
SIGTERM and SIGHUP, and upon SIGINT in batch mode.
+++
*** kill-emacs-hook is now also run in batch mode.