@@ -237,8 +237,8 @@ The frame-parameter tool-bar-position controls this.  It takes the values
 top, left, right or bottom.  The Options => Show/Hide menu has entries
 for this.
 
-*** The colors for selected text (the region face) are taken from the GTK
-theme when Emacs is built with GTK.
+*** The colors for selected text (the `region' face) are taken from
+the GTK theme when Emacs is built with GTK.
 
 *** Emacs uses GTK tooltips by default if built with GTK.  You can turn that
 off by customizing x-gtk-use-system-tooltips.
@@ -1311,6 +1311,8 @@ Use `filter-buffer-substring-functions' instead.
 *** `byte-compile-disable-print-circle' is obsolete.
 
 *** `deferred-action-list' and `deferred-action-function' are obsolete.
+
+*** `font-lock-maximum-size' is obsolete.
 
 
 * Changes in Emacs 24.1 on non-free operating systems
